# mongoshow

./: .editorconfig  .gitignore  LICENSE  README.md  mongoshow.cabal
app/: BsonSchema.hs  BsonSchemasView.hs  BsonValueFormatting.hs  CommandLine.hs  Main.hs  PrettyPrintBson.hs
lib/: BsonSchema.hs  BsonSchemasView.hs  CommandLine.hs  LibMain.hs  PrettyPrintBson.hs  Utils.hs
tests/: Main.hs  TestUtils.hs
