cabal-version:       3.0
name:                mongoshow
version:             0.1.0.0
synopsis:            Generates HTML file with document schemes.
description:         Command line utility that inspects MongoDB's collections
                     and generates simple html page with document schemes.
license:             MIT
license-file:        LICENSE
author:              KMaksim
maintainer:          KMaksim
category:            Database
homepage:            https://github.com/Gradi/mongoshow

library libmongoshow
  build-depends:       base                  >= 4.14.1 && < 4.15
                     , blaze-html            >= 0.9.1 && < 0.10
                     , bytestring            >= 0.10.12 && < 0.11
                     , deepseq               >= 1.4.4 && < 1.5
                     , text                  >= 1.2.4 && < 1.3
                     , containers            >= 0.6.2 && < 0.7
                     , blaze-markup          >= 0.8.2 && < 0.9
                     , mongoDB               >= 2.7.0 && < 2.8
                     , mtl                   >= 2.2.2 && < 2.3
                     , time                  >= 1.9.3 && < 1.10
                     , optparse-applicative  >= 0.16.1 && < 0.17
                     , prettyprinter         >= 1.7.0 && < 1.8
  hs-source-dirs:      lib
  other-modules:       CommandLine, BsonSchema, BsonSchemasView,
                       PrettyPrintBson
  exposed-modules:     LibMain, Utils
  default-language:    Haskell2010


executable mongoshow
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       libmongoshow
                     , base                  >= 4.14.1 && < 4.15
  default-language:    Haskell2010

test-suite test-mongoshow
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       libmongoshow
                     , base                  >= 4.14.1 && < 4.15
                     , QuickCheck
  other-modules:       TestUtils
  default-language:    Haskell2010
